Packaging: Add tool config.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "boilerplate-micropython"
-dynamic = ["version"]
+dynamic = ["version", "readme"]
 authors = [
   { name="Phil", email="phil@pimoroni.com" },
 ]
@@ -17,15 +17,48 @@ classifiers = [
 [tool.hatch.version]
 path = "src/boilerplate/__init__.py"
 
+[tool.hatch.metadata.hooks.fancy-pypi-readme]
+content-type = "text/markdown"
+fragments = [
+  { path = "README.md" },
+  { text = "\n" },
+  { path = "CHANGELOG.md" }
+]
+
 [tool.hatch.build]
 include = [
     "src/boilerplate/__init__.py",
     "README.md",
+    "CHANGELOG.md",
     "LICENSE.txt"
 ]
 
 [tool.hatch.build.targets.wheel]
 sources = ["src"]
+
+[tool.ruff]
+exclude = [
+    '.tox',
+    '.egg',
+    '.git',
+    '__pycache__',
+    'build',
+    'dist'
+]
+line-length = 200
+
+[tool.codespell]
+skip = """
+./.tox,\
+./.egg,\
+./.git,\
+./__pycache__,\
+./build,\
+./dist.\
+"""
+
+[tool.isort]
+line_length = 200
 
 [tool.check-manifest]
 ignore = [
