--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-    "urls": [
-      ["boilerplate.py", "github:pimoroni/boilerplate-micropython/src/boilerplate.py"]
-    ],
-    "version": "0.0.1"
+ "version": "0.0.1",
+ "urls": [
+  [
+   "boilerplate/__init__.py",
+   "github:pimoroni/boilerplate-micropython/src/boilerplate/__init__.py"
+  ]
+ ]
 }
